ckad_exercises/dist/config-pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod3
  name: pod3
spec:
  containers:
  - image: nginx
    name: pod3
    resources: {}
    volumeMounts:
    - name: vol1
      mountPath: /etc/lala
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: vol1
    configMap:
      name: cmvolume
status: {}
