ckad_exercises/dist/debug-busy-box.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: debug-busybox
  name: debug-busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - ls /notexist
    image: busybox
    name: debug-busybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
