ckad_exercises/dist/multi-container-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
      resources: {}
  restartPolicy: Never
  volumeMounts:
    - name: vol1
      mountPath: usr/share/nginx/html
  volumes:
    - name: vol1
      emptyDir: {}
status: {}
