ckad_exercises/dist/nginx-pod-user101.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-sc
  name: nginx-sc
spec:
  securityContext: # insert this line
    runAsUser: 1000 # UID for the user
  volumes:
  - name: sec-ctx-vol
    emptyDir: {}
  containers:
  - args:
    - nginx
    image: nginx
    name: nginx
    volumeMounts:
    - name: sec-ctx-vol
      mountPath: /data/demo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
