ckad_exercises/dist/node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx4
  name: nginx4
spec:
  containers:
  - image: nginx
    name: nginx4
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  
  nodeSelector:
    accelerator: nvidia-tesla-p100
status: {}
