ckad_exercises/dist/pvc-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pvc-nginx
  name: pvc-nginx
spec:
  volumes:
  - name: vol1
    persistentVolumeClaim:
      claimName: task-pv-claim
  containers:
  - image: nginx
    name: pvc-nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: vol1
      mountPath: "/usr/share/nginx/html"
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
