ckad_exercises/dist/readiness-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: readiness-nginx
  name: readiness-nginx
spec:
  containers:
  - image: nginx
    name: readiness-nginx
    resources: {}
    readinessProbe:
      httpGet:
       path: /
       port: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
