ckad_exercises/dist/sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sa-nginx
  name: sa-nginx
spec:
  serviceAccountName: myuser
  containers:
  - image: nginx
    name: sa-nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
