ckad_exercises/dist/secret-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: vol1
    secret:
      secretName: mysecret2
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: vol1
      mountPath: /etc/foo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
