ckad_exercises/dist/volumes-busybox-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: volumes-busybox-2
  name: volumes-busybox-2
spec:
  volumes:
  - name: vol1
    persistentVolumeClaim:
      claimName: mypvc
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: volumes-busybox-2
    volumeMounts:
    - name: vol1
      mountPath: /etc/foo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
